--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Lexend, normal;
   margin: 0;
   padding: 0;
-  background: url('../img/background.jpg') no-repeat center center fixed;
+  background: src="img/background.jpg'";
   background-size: cover;
 }
 header {
