--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,12 @@ body {
   font-family: Lexend, normal;
   margin: 0;
   padding: 0;
-  background: src="img/background.jpg'";
+  background-image: url('../img/background.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
+
 header {
   background-color: #004080;
   color: white;
